remember and forgot views

--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -61,9 +61,9 @@
 		</div>
 	</div>
 	<div class="grid-100 u-margin-top-10">
-		<div class="am-More-preload"><i class="fa fa-spinner"></i></div>
-		<div class="am-search-result">
-			No se encontraron resultados para: <span class="am-report-link" href="">asgsdf</span>
+		<div class="am-More-preload loading hide"><i class="fa fa-spinner"></i></div>
+		<div class="am-search-result empty-message hide">
+			No se encontraron resultados para: <span class="am-report-link" href="">{{data.filters.currentCategory}}</span>
 			<br><br>
 			<a href="/works/category/all/page-1" class="am-report-link blue" href="">Volver a todas las obras</a>
 		</div>
