--- a/app/views/auth/reset.html
+++ b/app/views/auth/reset.html
@@ -4,8 +4,8 @@
 {% block elements %}
 	<div class="am-register">
 		<div class="am-register-box">
-			<img class="logo-img" src="img/logo-small.png" />
-			<img class="logo-text" src="img/logo-text-black.svg" />
+			<img class="logo-img" src="/img/logo-small.png" />
+			<img class="logo-text" src="/img/logo-text-black.svg" />
 			<p class="title">Los genios usualmente olvidan las cosas por concentrarse en lo importante</p>
 			<br><br><br>
 			<input class="input" type="text" placeholder="E-mail"></input>
