--- a/app/views/user/work/add-edit.html
+++ b/app/views/user/work/add-edit.html
@@ -17,7 +17,7 @@
 					<div class="profile-imgage">
 						<div class="preview">
 							{% if work %}
-							<img src="{{work.photo|addFilter('w_300,c_limit')}}"/>
+								<img src="{{work.photo|addFilter('w_300,c_limit')}}"/>
 							{% else %}
 								<img src="https://cdn1.iconfinder.com/data/icons/hawcons/32/699085-icon-93-inbox-upload-128.png"/>
 							{% endif %}
@@ -26,8 +26,9 @@
 					<div class="preload hide"><i class="fa fa-spinner"></i></div>
 				</div>
 				<div class="image-uploader" style="position:relative;">
-					{{cloudinary.uploader.image_upload_tag('photo', { callback: cloudinary_cors, return_delete_token: true})}}
+					{{ cloudinary.uploader.image_upload_tag('photo', {callback: cloudinary_cors, return_delete_token: true, html: { style: "width:230px;height:55px;top:15px;left: 105px;" } })}}
 				</div>
+				<button class="button upload u-margin-top-30">BUSCAR ARCHIVO</button>
 				<div class="separator">
 					<span class="line"></span><span class="text">DATOS DE LA OBRA</span><span class="line"></span>
 				</div>
@@ -67,16 +68,18 @@
 					</label>
 				</div>
 
-				<button class="button u-margin-top-30" data-color="blue">
+				<button class="button u-margin-top-30 save" data-color="blue">
 					{% if mode === 'add' %}
 					SUBIR OBRA
 					{% else %}
 					ACTUALIZAR OBRA
 					{% endif %}
 				</button>
-				<button class="button u-margin-top-30" data-color="blue">
-					<i class="load fa fa-spinner"></i>
-				</button>
+				<div class="hide save-loading">
+					<button class="button u-margin-top-30" data-color="blue">
+						<i class="load fa fa-spinner"></i>
+					</button>
+				</div>
 			</div>
 		</form>
 	</div>
@@ -126,6 +129,8 @@ $(document).ready(function() {
 		url = DataApp.currentUser.url + '/work/update';
 	}
 	$('.add-work').submit(function(event){
+		$('.save').hide();
+		$('.save-loading').show();
 		event.preventDefault();
 		formData.photo = uploaderImage.photo;
 		formData.name = $('input[name=name]').val();
