--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -281,7 +281,7 @@
 	            <button>ADD COMMENT</button>
 	          </form>
 	        {% else %}
-	          <a href="/auth/login">Logeate, para agregar review</a>
+	          <a class="login-first">Logeate, para agregar review</a>
 	        {% endif %}
 	      </div>
 	    </div>
@@ -421,7 +421,6 @@
 
 		$("#go-collection-modal").leanModal();
 		$("#go-share-modal").leanModal();
-
 	</script>
 	<script src='/work-product.js'></script>
 {% endblock %}
