--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -949,6 +949,13 @@ body
 		font-size 18px
 		margin: 10px 0 12px 0;
 		color white
+	.social-networks
+		a
+			margin-right .5em
+		i
+			color: white;
+			font-size: .9em;
+
 
 .am-Profile-menu-container
 	background #eee
