--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -32,6 +32,11 @@
 					<div>
 						<p class="name">{{profile.fullname}}</p>
 						<p class="city">{{profile.city}}, {{profile.country}}</p>
+						<div class="social-networks">
+							<a href=""><i class="bi_logo-facebook"></i></a>
+							<a href=""><i class="bi_logo-twitter"></i></a>
+							<a href=""><i class="bi_logo-instagram"></i></a>
+						</div>
 						{% if !owner %}
 							{% if profile.following %}
 							<button class="am-Follow-button following">- Siguiendo</button>
