add pad password view

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -185,6 +185,8 @@
 		<div class="grid-item">
 			<a href="/user/<%=User.username%>/product/<%=nameSlugify%>">
 		  	<div class="product-card">
+					<div class="edit"><i class="bi_editorial-compose"></i></div>
+
 					<div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
 					<div class="product-card-image" style="background-image: url('<%= addFilter(photo, 'w_300,h_300,c_fill') %>')"></div>
 		  		<div class="product-card-data">
