--- a/app/views/user/collection/index.html
+++ b/app/views/user/collection/index.html
@@ -8,7 +8,7 @@
 			&nbsp;
 		</div>
 		<div class="grid-60">
-			<p class="am-navigation-text">{{collection.User.firstname}} > {{collection.name}}</p>
+			<p class="am-navigation-text">{{collection.User.firstname}} > Colecciones > {{collection.name}}</p>
 		</div>
 		<div class="grid-20 filter right">
 			&nbsp;
