--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -285,6 +285,7 @@
 	  <div class="grid-container">
 	    <div class="grid-100">
 	      <div class="more-carousel">
+	      	<p>Este artista no tiene mas obras</p>
 	        <div class="more-images more">
 	        </div>
 	      </div>
