--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -131,6 +131,7 @@
 											},
 											toMobile: function () {
 												console.log('toMobile!')
+												$('.filter.left .left-menu').css('display', 'block')
 											}
 										})
 
