--- a/app/styles/texts.styl
+++ b/app/styles/texts.styl
@@ -6,6 +6,8 @@
 	color charcoal-grey
 	letter-spacing 1px
 	font-size 12.4px
+	i
+		font-size 13px
 
 .am-NavigationMenu-title-text
 	font-family 'Montserrat', sans-serif
