--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -14,22 +14,26 @@
 				<ul class="am-Header-menu">
 					<li class="am-Header-menu-item">
 						<a class="am-Header-text desktop" href="/collections/category/all/page-1?order=popularity">
-							<p>COLECCIONES</p><i class="fa fa-heart-o"></i>
+							<!-- <p>COLECCIONES</p><i class="fa fa-heart-o"></i> -->
+							<p>COLECCIONES</p><i class="bi_media-image-b"></i>
 						</a>
 					</li>
 					<li class="am-Header-menu-item">
 						<a class="am-Header-text desktop" href="/users/specialty/all/page-1?order=popularity">
-							<p>ARTISTAS</p><i class="fa fa-heart-o"></i>
+							<!-- <p>ARTISTAS</p><i class="fa fa-heart-o"></i> -->
+							<p>ARTISTAS</p><i class="bi_interface-heart"></i>
 						</a>
 					</li>
 					<li class="am-Header-menu-item">
 						<a class="am-Header-text desktop" href="/works/category/all/page-1/?order=popularity">
-							<p>OBRAS</p><i class="fa fa-paint-brush"></i>
+							<!-- <p>OBRAS</p><i class="fa fa-paint-brush"></i> -->
+							<p>OBRAS</p><i class="bi_editorial-brush"></i>
 						</a>
 					</li>
 					<li class="am-Header-menu-item">
 						<a class="am-Header-text desktop" href="/products/type/all/page-1?order=popularity">
-							<p>TIENDA</p><i class="fa fa-diamond"></i>
+							<!-- <p>TIENDA</p><i class="fa fa-diamond"></i> -->
+							<p>TIENDA</p><i class="bi_ecommerce-diamon"></i>
 						</a>
 					</li>
 					{% if user %}
