--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -136,6 +136,60 @@
 					</div>
 					{% endif %}
 
+
+					<div class="info-box u-margin-top-25">
+						<div class="header">
+							<p class="selected">ORIGINAL</p>
+							<p>PRODUCTOS</p>
+						</div>
+						<div class="body u-text-center">
+							<p class="title large">Precio Obra Original</p>
+							<p class="price u-padding-top-10">S/. <strong class="large">1500</strong></p>
+							<button class="am-View-button expand u-margin-top-20">COMPRAR</button>
+							<p class="msg u-padding-top-15 u-padding-bottom-4">7 días para devolver cualquier obra</p>
+						</div>
+					</div>
+
+					<div class="info-box u-margin-top-25">
+						<div class="header">
+							<p>ORIGINAL</p>
+							<p class="selected">PRODUCTOS</p>
+						</div>
+						<div class="body">
+							<p class="text">Producto:</p>
+							<p class="title">Mate photo print</p>
+							<p class="text">180 gsm / Calidad archivo hecho en Lima / Elaborado por arte manifiesto lab.</p>
+
+							<p class="text u-margin-top-10">Tamaño:</p>
+							<select class="expand">
+								<option>Elige el tamaño</option>
+								<option>Holi</option>
+								<option>Boli</option>
+								<option>Crayoli</option>
+							</select>
+
+							<p class="text u-margin-top-10">Precio por unidad:</p>
+							<p class="price u-text-center">S/.<strong>42.99</strong> PEN</p>
+
+							<p class="text u-margin-top-10">Cantidad:</p>
+							<div class="u-center">
+								<div class="u-margin-top-7">
+									<span class="text">X</span>
+									<select>
+										<option>1</option>
+										<option>2</option>
+										<option>3</option>
+										<option>4</option>
+									</select>
+									<span class="text">&nbsp;&nbsp;Unidades</span>
+								</div>
+							</div>
+							<div class="u-center">
+								<button class="am-View-button expand u-margin-top-20">COMPRAR</button>
+							</div>
+						</div>
+					</div>
+
 					<p class="am-stats-text u-margin-top-40">ESTADÍSTICAS</p>
 					<div class="u-separator"></div>
 					<div class="u-center">
