add edit collection form

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -518,6 +518,17 @@ body
 	color white
 	cursor pointer
 
+.edit-collection
+	font-size 1.15em
+	position absolute
+	// top 15px
+	bottom 0
+	right 20px
+	color white
+	cursor pointer
+	a
+		color #333
+
 .footer
 	padding 40px 0
 	&-logo
