new public images

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -57,6 +57,8 @@
 									<div class="user-menu">
 										<a href="/user/{{user.username}}" class="user-menu-item">MI PORTAFOLIO</a>
 										<div class="u-separator"></div>
+										<a href="/user/{{user.username}}/work/add" class="user-menu-item">SUBIR OBRA</a>
+										<div class="u-separator"></div>
 										<a href="/user/{{user.username}}/account" class="user-menu-item">ADMINISTRAR CUENTA</a>
 										<div class="u-separator"></div>
 										<a href="/auth/logout" class="user-menu-item">SALIR</a>
