add selected class in work menu

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2093,6 +2093,7 @@ body
 		min-width 100px
 		color #333
 		&[selected="true"]
+		&.selected
 			background white
 			border-top solid 1px #eeeeee
 			border-left solid 1px #b8b8b8
