add lock icon in work

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -116,6 +116,8 @@
 		<div class="grid-item">
 			<div class="work-card">
 
+				<div class="lock"><i class="bi_user-lock"></i></div>
+
 				<% if (viewer && viewer.isAdmin) { %>
 					<div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
 				<% } else { %>
