--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -502,6 +502,23 @@ body
 	&.disabled
 		background #aaa
 
+.lock
+	position absolute
+	top -10px
+	// right 5px
+	left 45px
+	// background #ed86ff
+	// background orange
+	font-family 'Montserrat', sans-serif
+	// font-weight bold
+	// font-size 8px
+	font-size 15px
+	// color white
+	color orange
+	// padding 4px 11px
+	// border-radius 3px
+	// cursor pointer
+
 .delete
 	position absolute
 	bottom 10px
