addd switch in edit colelction

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1336,6 +1336,9 @@ body
 	font-size 16px
 	color #959ea0
 	line-height 1.25
+	a
+		color #959ea0
+		padding-right: 5px;
 	i
 		font-style italic
 
