--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -208,6 +208,9 @@
 		<div class="grid-item">
 			<a href='/user/<%=User.username%>/collection/<%=nameSlugify%>'>
 				<div class="collection-card">
+
+					<div class="lock"><i class="bi_user-lock"></i></div>
+
 					<div class="featured <% if (!featured) { %>disabled<% } %>">AM</div>
 					<div class="collection-card-stats">
 						<p><%=name%></p>
