--- a/app/views/user/collection/index.html
+++ b/app/views/user/collection/index.html
@@ -65,6 +65,19 @@
 				<div class="grid-100 mobile-grid-100">
 					<p class="title">Descripcion de la coleccion</p>
 					<textarea name='description' required class='input'placeholder="Descripcion" maxlength='140'>{{work.description}}</textarea>
+
+					<div class="switch u-margin-top-10">
+						<p class="title">Público</p>
+						<span class="value">On</span>
+
+						<input type="checkbox" name="public" id="public" checked/>
+						<label for="public">
+						  <div class="am-Switch-button">
+						  	<i class="fa fa-bars"></i>
+						  </div>
+						</label>
+					</div>
+
 				</div>
 
 				<div class="u-padding-top-20">
